distributor details page(creator details page) and added image upload to create offer page

--- a/src/main/resources/static/projectSkeleton/html/reviews.html
+++ b/src/main/resources/static/projectSkeleton/html/reviews.html
@@ -153,8 +153,7 @@
 
                             </div>
                             <div class="graph-star-rating-footer text-center mt-3 mb-3">
-                                <a href="#"><button type="button" class="btn btn-outline-primary btn-sm fill-btn">Rate and Review</button></a>
-                            </div>
+                                <button type="button" class="btn btn-outline-primary btn-sm fill-btn" onclick="window.scroll(0, document.querySelector('.container').scrollHeight)">Rate and Review</button>                            </div>
                         </div>
 
 
