--- a/src/main/resources/static/projectSkeleton/html/addOffer.html
+++ b/src/main/resources/static/projectSkeleton/html/addOffer.html
@@ -11,10 +11,12 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -101,7 +103,7 @@
                                                class="form-control" placeholder="Distributor">
                                     </div>
                                     <div class="form-group">
-                                        <input type="number" name="password" id="Price" tabindex="2"
+                                        <input type="number" step="0.01" name="password" id="Price" tabindex="2"
                                                class="form-control" placeholder="Price">
                                     </div>
                                     <div class="form-group">
@@ -115,10 +117,27 @@
                                             <option>Relish</option>
                                         </select>
                                     </div>
-                                    <div class="form-group">
-                                        <input type="password" name="password" id="log_password" tabindex="2"
-                                               class="form-control" placeholder="Password">
+                                    <div class="form-group" id="image-group">
+                                        <label for="formFile" class="custom-file-upload">
+                                            Click to upload images
+                                        </label>
+                                        <input class="form-control" type="file" id="formFile" multiple>
                                     </div>
+
+                                    <table class="form-group" id="image-container">
+                                        <tbody>
+                                            <tr>
+                                                <td>Files Uploaded:</td>
+                                            </tr>
+                                            <tr>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <td></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+
 
                                     <div class="form-group">
                                         <div class="row">
