distributor details and create offer page fixes

--- a/src/main/resources/static/projectSkeleton/html/reviews.html
+++ b/src/main/resources/static/projectSkeleton/html/reviews.html
@@ -153,7 +153,8 @@
 
                             </div>
                             <div class="graph-star-rating-footer text-center mt-3 mb-3">
-                                <button type="button" class="btn btn-outline-primary btn-sm fill-btn" onclick="window.scroll(0, document.querySelector('.container').scrollHeight)">Rate and Review</button>                            </div>
+                                <button type="button" class="btn btn-outline-primary btn-sm fill-btn" onclick="window.scroll(0, document.querySelector('.container').scrollHeight)">Rate and Review</button>
+                            </div>
                         </div>
 
 
