--- a/src/main/resources/static/projectSkeleton/html/addOffer.html
+++ b/src/main/resources/static/projectSkeleton/html/addOffer.html
@@ -74,7 +74,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-6 col-md-offset-3" id="offer-form-cont">
                 <div class="panel panel-offer">
                     <div class="panel-heading">
                         <div class="row">
@@ -126,25 +126,23 @@
 
                                     <table class="form-group" id="image-container">
                                         <tbody>
-                                            <tr>
-                                                <td>Files Uploaded:</td>
-                                            </tr>
-                                            <tr>
-                                                <td></td>
-                                            </tr>
-                                            <tr>
-                                                <td></td>
-                                            </tr>
+                                        <tr>
+                                            <td>Files Uploaded:</td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                        </tr>
                                         </tbody>
                                     </table>
 
 
                                     <div class="form-group">
-                                        <div class="row">
-                                            <div class="col-sm-6 col-sm-offset-3">
-                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4"
-                                                       class="form-control btn btn-makeOffer" value="Create">
-                                            </div>
+                                        <div class="col-sm-6 col-sm-offset-3" id="submit-cont">
+                                            <input type="submit" name="login-submit" id="login-submit" tabindex="4"
+                                                   class="form-control btn btn-makeOffer" value="Create">
                                         </div>
                                     </div>
 
