--- a/src/main/resources/static/projectSkeleton/html/cart.html
+++ b/src/main/resources/static/projectSkeleton/html/cart.html
@@ -19,12 +19,13 @@
 
 
     <script src="../js/sidebar.js" type="module"></script>
+    <script src="../js/plus-minus.js" type="module"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/orderDetails.css"/>
+    <link rel="stylesheet" href="../css/cart.css"/>
 
     <link rel="icon" href="../images/ace-of-spades.png">
     <title>Victory</title>
@@ -89,28 +90,28 @@
                                             <div class="flex-shrink-0 product-image">
                                                 <img src="https://via.placeholder.com/280x280/87CEFA/000000" alt="" width="35" class="img-fluid">
                                             </div>
+                                            <div class="flex-lg-grow-1 ms-3 product-description">
+                                                <h6 class="small mb-0"><a href="#" class="text-reset">Wireless Headphones with Noise Cancellation Tru Bass Bluetooth HiFi</a></h6>
+                                                <span class="small">Color: Black</span>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="quantity-cont"><button class="minus">-</button><span class="quantity">5</span><button class="plus">+</button></td>
+                                    <td class="text-end product-price">$79.99</td>
+                                </tr>
+                                <tr>
+                                    <td class="product">
+                                        <div class="d-flex mb-2">
+                                            <div class="flex-shrink-0 product-image">
+                                                <img src="https://via.placeholder.com/280x280/87CEFA/000000" alt="" width="35" class="img-fluid">
+                                            </div>
                                             <div class="flex-lg-grow-1 ms-3">
                                                 <h6 class="small mb-0"><a href="#" class="text-reset">Wireless Headphones with Noise Cancellation Tru Bass Bluetooth HiFi</a></h6>
                                                 <span class="small">Color: Black</span>
                                             </div>
                                         </div>
                                     </td>
-                                    <td>1</td>
-                                    <td class="text-end">$79.99</td>
-                                </tr>
-                                <tr class="product">
-                                    <td>
-                                        <div class="d-flex mb-2">
-                                            <div class="flex-shrink-0 product-image">
-                                                <img src="https://via.placeholder.com/280x280/FF69B4/000000" alt="" width="35" class="img-fluid">
-                                            </div>
-                                            <div class="flex-lg-grow-1 ms-3">
-                                                <h6 class="small mb-0"><a href="#" class="text-reset">Smartwatch IP68 Waterproof GPS and Bluetooth Support</a></h6>
-                                                <span class="small">Color: White</span>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>1</td>
+                                    <td class="quantity-cont"><button class="minus">-</button><span class="quantity">5</span><button class="plus">+</button></td>
                                     <td class="text-end">$79.99</td>
                                 </tr>
                                 </tbody>
@@ -126,6 +127,12 @@
                                 <tr class="fw-bold">
                                     <td colspan="2">TOTAL</td>
                                     <td class="text-end">$169,98</td>
+                                </tr>
+                                <tr id="purchase-row">
+                                    <td colspan="2"></td>
+                                    <td class="text-end">
+                                        <a href="#" id="purchase-btn">Order</a>
+                                    </td>
                                 </tr>
                                 </tfoot>
                             </table>
@@ -162,8 +169,6 @@
 <footer>&copy Victory 2022. All rights reserved.</footer>
 
 <script>
-
-
     //TODO: change this when making the template
 
     document.querySelectorAll(".product").forEach(e=>e.addEventListener("click", (ev)=>{
