fixed mobile view an all pages so far

--- a/src/main/resources/static/projectSkeleton/html/catalog.html
+++ b/src/main/resources/static/projectSkeleton/html/catalog.html
@@ -137,7 +137,7 @@
 
             <div class="row">
 
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -163,7 +163,7 @@
                     </div>
                 </a>
 
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
