--- a/src/main/resources/static/projectSkeleton/html/wishlist.html
+++ b/src/main/resources/static/projectSkeleton/html/wishlist.html
@@ -138,7 +138,7 @@
 
             <div class="row">
 
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -165,7 +165,7 @@
                     </div>
                 </a>
 
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                 <div class="col-md-4">
                     <div class="card mb-4 box-shadow productCard">
                         <img class="card-img-top"
@@ -243,7 +243,7 @@
                     </div>
                 </div>
             </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="index.html" class="card-link-wrap">
+                <a href="home.html" class="card-link-wrap">
                     <div class="col-md-4">
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
