requests summary page made

--- a/src/main/resources/static/projectSkeleton/html/requests.html
+++ b/src/main/resources/static/projectSkeleton/html/requests.html
@@ -80,11 +80,11 @@
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>Seller</th>
-                                    <th>Contents</th>
-                                    <th>status</th>
-                                    <th>Total</th>
-                                    <th>Created</th>
+                                    <th>Content</th>
+                                    <th>Creator</th>
+                                    <th>Type</th>
+                                    <th>Approve</th>
+                                    <th>Decline</th>
                                 </tr>
                             </thead>
                             <tbody class="table-body">
